<resources>
    <string name="app_name">Мой Технопарк</string>
    <string name="events">Объявления</string>
    <string name="request">Заявки</string>
    <string name="complaints">Подать жалобу</string>
    <string name="rent">Аренда помещения</string>
    <string name="cleaning">Уборка помещения</string>
    <string name="residents">Резиденты</string>
    <string name="support">Поддержка</string>
    <string name="menu">Меню</string>
    <string name="registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="post_request">POST request</string>
    <string name="title_activity_sign_in">Войти</string>


    <string name="title_activity_mainac">Mainac</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Имя</string>
    <string name="Last_name">Фамилия</string>
    <string name="Patronymic">Отчество</string>
    <string name="Reg">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="entery">Вход</string>
    <string name="position">Должность</string>
    <string name="about_me">О себе</string>

    <string name="number_list">Список чисел</string>
    <string name="empty">Нет данных</string>
    <string name="history_complaint">История жалобы:</string>
    <string name="now_status">Текущий статус:</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
</resources>
